--- a/src/main/resources/image/browser/javafx/bundle/base.properties
+++ b/src/main/resources/image/browser/javafx/bundle/base.properties
@@ -1,21 +1,8 @@
 # Default bundle, used when no bundle is found for specific language
 
-label.firstTab=Search book
-label.secondTab=Add new book
-label.title=Title:
-label.author=Author:
-label.state=State:
-
 button.loadFolder=Load folder
-button.add=Add
-button.delete=Delete
+button.previous=Previous
+button.next=Next
+button.play=Play
+button.pause=Pause
 
-state.ANY=
-state.FREE=free
-state.LOAN=loan
-
-table.emptyText=No results
-column.id=Id
-column.title=Title
-column.author=Author
-column.state=State
